--- a/recursion.html
+++ b/recursion.html
@@ -72,11 +72,59 @@ console.log(sumSalaries(company));
   //factorial
     //
     function fact(n){
-        let sum = 0;
-        for(i = 0; i <= n; i++){
-            sum = 
+        let sum = 1;
+        for(i = 0; i = n; i++){
+            sum = sum * n ;
+            n--
+            
         }
+        return sum;
     }
+   console.log(fact(8));
+
+
+   //
+   function factorial(n){
+    if(n == 1)return 1;
+    return n * factorial(n-1);
+   }
+   console.log(factorial(8))
+
+   //linked list
+    //using while loop
+   let list = {
+  value: 1,
+  next: {
+    value: 2,
+    next: {
+      value: 3,
+      next: {
+        value: 4,
+        next: null
+      }
+    }
+  }
+};
+
+function linked(list){
+
+  while(list){
+    console.log(list.value);
+    list = list.next;
+  }
+}
+linked(list);
+
+    // using recursion
+
+    function printList(list){
+      console.log(list.value);
+      if(list.next){
+        printList(list.next);
+      }
+    }
+    printList(list);
+
     </script>
 </body>
 </html>
